[gd_scene load_steps=3 format=3 uid="uid://bt87bwwwbskq8"]

[ext_resource type="Script" uid="uid://bgr05j8tjkxbw" path="res://game.gd" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://v2anwqlska3f" path="res://dice_sprite_cr.png" id="2_0xm2m"]

[node name="game" type="Node2D" node_paths=PackedStringArray("DiceOne", "TextLabel")]
script = ExtResource("1_ig7tw")
DiceOne = NodePath("Dice One")
TextLabel = NodePath("Container/RichTextLabel")

[node name="Dice One" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(315, 235)
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_0xm2m")
hframes = 3
vframes = 2
frame = 3

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Container"]
layout_mode = 0
offset_left = 21.0
offset_top = 20.0
offset_right = 621.0
offset_bottom = 180.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Your Turn
Your Score: 0000
Opponent Score: 0000
Goal: 0000"

[node name="Roll Btn" type="Button" parent="Container"]
layout_mode = 0
offset_left = 385.0
offset_top = 420.0
offset_right = 625.0
offset_bottom = 470.0
text = "Roll"

[node name="Hold Btn" type="Button" parent="Container"]
layout_mode = 0
offset_left = 15.0
offset_top = 420.0
offset_right = 255.0
offset_bottom = 470.0
text = "Pass"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="pressed" from="Container/Roll Btn" to="." method="_on_roll_btn_pressed"]
[connection signal="pressed" from="Container/Hold Btn" to="." method="_on_hold_btn_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
